terraform-ansible/main.tf
provider "aws" {
    region = "us-east-1"
}

resource "tls_private_key" "key" {
    algorithm = "RSA"
}

resource "aws_key_pair" "key_pair" {
    key_name   = "ansible-key"
    public_key = tls_private_key.key.public_key_openssh
}

resource "aws_security_group" "allow_ssh" {
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

data "aws_ami" "ami" {
  most_recent = true

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-2.0.*-x86_64-gp2"]
  }

  owners = ["amazon"]
}

resource "aws_instance" "ansible_server" {
    ami                    = data.aws_ami.ami.id
    instance_type          = "t2.micro"
    vpc_security_group_ids = [aws_security_group.allow_ssh.id]
    key_name               = aws_key_pair.key_pair.key_name

    provisioner "remote-exec" {
        inline = [
        "sudo yum update -y",
        "sudo yum install -y httpd.x86_64",
        "sudo systemctl start httpd",
        "sudo systemctl enable httpd"
        ]
    }

    connection {
        type        = "ssh"
        user        = "ec2-user"
        private_key = tls_private_key.key.private_key_pem
        host        = self.public_ip
    }

    tags = {
        Name = "Apache Server"
    }
}
